updated to use "operation" for token request and verification
